k8s/homepage/argocd-homepage-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-homepage
  namespace: argocd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Argo CD"
    gethomepage.dev/description: "GitOps control plane"
    gethomepage.dev/group: "GitOps"
    gethomepage.dev/icon: "argocd.png"
spec:
  rules:
    - host: argocd.rohu-shark.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
